// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenovationForm Component Renderització mode create snapshot test - mode create 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 66,
        "paddingHorizontal": 16,
        "paddingTop": 96,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "transparent",
                "padding": 8,
              },
              {
                "paddingTop": 8,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 18,
                  "elevation": 2,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 44,
                  "marginRight": 8,
                  "paddingHorizontal": 16,
                  "shadowColor": "rgba(0, 0, 0, 0.05)",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 4,
                }
              }
            >
              <InformationIcon
                color="#6B7280"
                height={20}
                width={20}
              />
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={true}
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="map.searchPlaceholder"
                placeholderTextColor="#6B7280"
                style={
                  {
                    "color": "#616774ff",
                    "flex": 1,
                    "fontFamily": "Arimo",
                    "fontSize": 16,
                    "height": 44,
                    "marginLeft": 8,
                  }
                }
                value=""
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.datesLabel
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "marginBottom": 4,
                }
              }
            >
              createRenovation.iniDateLabel
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#999",
                    "fontSize": 16,
                  }
                }
              >
                createRenovation.selectDate
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "marginBottom": 4,
                }
              }
            >
              createRenovation.finDateLabel
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#999",
                    "fontSize": 16,
                  }
                }
              >
                createRenovation.selectDate
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.descriptionLabel
        </Text>
        <TextInput
          maxLength={1000}
          multiline={true}
          numberOfLines={4}
          onChangeText={[Function]}
          placeholder="createRenovation.descriptionPlaceholder"
          placeholderTextColor="#999"
          style={
            [
              {
                "backgroundColor": "#fff",
                "borderColor": "#E5E7EB",
                "borderRadius": 12,
                "borderWidth": 1,
                "color": "#1F2937",
                "fontSize": 16,
                "minHeight": 100,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
                "textAlignVertical": "top",
              },
              null,
            ]
          }
          value=""
        />
        <View
          style={
            {
              "alignSelf": "flex-start",
              "marginLeft": 16,
              "marginTop": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#6B7280",
                  "fontSize": 12,
                },
                null,
              ]
            }
          >
            0
            /1000
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.materialsLabel
           
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 14,
                "fontWeight": "400",
              }
            }
          >
            (
            common.optional
            )
          </Text>
        </Text>
        <TextInput
          maxLength={500}
          multiline={true}
          numberOfLines={3}
          onChangeText={[Function]}
          placeholder="createRenovation.materialsPlaceholder"
          placeholderTextColor="#999"
          style={
            {
              "backgroundColor": "#fff",
              "borderColor": "#E5E7EB",
              "borderRadius": 12,
              "borderWidth": 1,
              "color": "#1F2937",
              "fontSize": 16,
              "minHeight": 100,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
              "textAlignVertical": "top",
            }
          }
          value=""
        />
        <View
          style={
            {
              "alignSelf": "flex-start",
              "marginLeft": 16,
              "marginTop": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#6B7280",
                  "fontSize": 12,
                },
                null,
              ]
            }
          >
            0
            /500
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 8,
              }
            }
          >
            createRenovation.groupLinkLabel
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <InformationIcon
              color="#6B7280"
              height={20}
              width={20}
            />
          </View>
        </View>
        <TextInput
          autoCapitalize="none"
          keyboardType="url"
          onChangeText={[Function]}
          placeholder="createRenovation.groupLinkPlaceholder"
          placeholderTextColor="#999"
          style={
            [
              {
                "backgroundColor": "#fff",
                "borderColor": "#E5E7EB",
                "borderRadius": 12,
                "borderWidth": 1,
                "color": "#1F2937",
                "fontSize": 16,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              },
              null,
            ]
          }
          value=""
        />
      </View>
      <View
        style={
          {
            "marginTop": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 12,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            colors={
              [
                "#9CA3AF",
                "#6B7280",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff",
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              createRenovation.submit
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`RenovationForm Component Renderització mode edit snapshot test - mode edit 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 66,
        "paddingHorizontal": 16,
        "paddingTop": 96,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          [
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.datesLabel
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "marginBottom": 4,
                }
              }
            >
              createRenovation.iniDateLabel
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F2937",
                    "fontSize": 16,
                  }
                }
              >
                02/01/2026
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "marginBottom": 4,
                }
              }
            >
              createRenovation.finDateLabel
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F2937",
                    "fontSize": 16,
                  }
                }
              >
                02/15/2026
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.descriptionLabel
        </Text>
        <TextInput
          maxLength={1000}
          multiline={true}
          numberOfLines={4}
          onChangeText={[Function]}
          placeholder="createRenovation.descriptionPlaceholder"
          placeholderTextColor="#999"
          style={
            [
              {
                "backgroundColor": "#fff",
                "borderColor": "#E5E7EB",
                "borderRadius": 12,
                "borderWidth": 1,
                "color": "#1F2937",
                "fontSize": 16,
                "minHeight": 100,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
                "textAlignVertical": "top",
              },
              null,
            ]
          }
          value="Renovació de la teulada del refugi"
        />
        <View
          style={
            {
              "alignSelf": "flex-start",
              "marginLeft": 16,
              "marginTop": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#6B7280",
                  "fontSize": 12,
                },
                null,
              ]
            }
          >
            34
            /1000
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          createRenovation.materialsLabel
           
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 14,
                "fontWeight": "400",
              }
            }
          >
            (
            common.optional
            )
          </Text>
        </Text>
        <TextInput
          maxLength={500}
          multiline={true}
          numberOfLines={3}
          onChangeText={[Function]}
          placeholder="createRenovation.materialsPlaceholder"
          placeholderTextColor="#999"
          style={
            {
              "backgroundColor": "#fff",
              "borderColor": "#E5E7EB",
              "borderRadius": 12,
              "borderWidth": 1,
              "color": "#1F2937",
              "fontSize": 16,
              "minHeight": 100,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
              "textAlignVertical": "top",
            }
          }
          value="Teules, eines bàsiques"
        />
        <View
          style={
            {
              "alignSelf": "flex-start",
              "marginLeft": 16,
              "marginTop": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#6B7280",
                  "fontSize": 12,
                },
                null,
              ]
            }
          >
            22
            /500
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 8,
              }
            }
          >
            createRenovation.groupLinkLabel
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <InformationIcon
              color="#6B7280"
              height={20}
              width={20}
            />
          </View>
        </View>
        <TextInput
          autoCapitalize="none"
          keyboardType="url"
          onChangeText={[Function]}
          placeholder="createRenovation.groupLinkPlaceholder"
          placeholderTextColor="#999"
          style={
            [
              {
                "backgroundColor": "#fff",
                "borderColor": "#E5E7EB",
                "borderRadius": 12,
                "borderWidth": 1,
                "color": "#1F2937",
                "fontSize": 16,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              },
              null,
            ]
          }
          value="https://chat.whatsapp.com/testgroup123"
        />
      </View>
      <View
        style={
          {
            "marginTop": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 12,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            colors={
              [
                "#FF8904",
                "#F54900",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff",
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              common.save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
